--- a/index.html
+++ b/index.html
@@ -11,5 +11,17 @@
     <div>
       <h1 class="title">The Mystical Magic 8-Ball</h1>
     </div>
+    <div class="container">
+      <h2 id="information">
+        Ask me what you want to know and click on the Magic 8 Ball
+      </h2>
+      <input type="text" id="question" />
+      <div id="eight-ball" clsss="eight-ball">
+        <div id="answer">
+          <p id="eight">8</p>
+          <p id="answer"></p>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
