Added outline for 8-ball

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         Ask me what you want to know and click on the Magic 8 Ball
       </h2>
       <input type="text" id="question" />
-      <div id="eight-ball" clsss="eight-ball">
+      <div class="eight-ball" id="eight-ball">
         <div id="answer">
           <p id="eight">8</p>
           <p id="answer"></p>
