--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </div>
     <div class="container">
       <h2 class="information">
-        Ask me what you want to know and click on the Magic 8 Ball
+        Ask me what you want to know and click on the Magic 8-Ball
       </h2>
       <input type="text" id="question" placeholder="Enter your question..." />
       <div class="eight-ball" id="eight-ball">
